--- a/css/bars.css
+++ b/css/bars.css
@@ -14,6 +14,10 @@ ul.top-bar {
     overflow: hidden;
     background-color: #BBB;
     position: fixed;
+
+    z-index: 99;
+
+    box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
 
 ul.top-bar li:first-child {
@@ -57,11 +61,19 @@ ul.side-bar {
     height: 100%;
     position: fixed;
     overflow: auto;
+    border-right: #d9d9d9 1px solid;
+
+    z-index: 98;
+    box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.2), 0px 3px 4px 0px rgba(0, 0, 0, 0.14), 0px 3px 3px -2px rgba(0, 0, 0, 0.12);
 }
 
 ul.side-bar li {
     text-align: center;
     padding: 10px 0 10px 0;
+}
+
+ul.side-bar li h1 {
+    color: #b25450;
 }
 
 ul.side-bar li a {
